@@ -1,3 +1,8 @@
+2007-02-18  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/gameswf_test_ogl: a bit cleanup
+	* gameswf/gameswf_impl.cpp: fixed memory leaks
+
 2007-02-17  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf_test_ogl: added memory leaks tester
